# icloud-calendar-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
src/icloud_calendar_mcp/: __init__.py  calendar.py  github_oauth_provider.py
