[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icloud-calendar-mcp"
version = "0.1.0"
description = "MCP server for Apple iCloud Calendar via CalDAV"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
    "caldav>=1.3.0",
    "icalendar>=5.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "anyio>=4.0.0",
]

[project.scripts]
icloud-calendar-mcp = "icloud_calendar_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_calendar_mcp"]
